--- a/css/media.css
+++ b/css/media.css
@@ -1,3 +1,64 @@
+@media (max-width: 1300px) {
+    .vartRan {
+        display: block;
+
+        h2 {
+            margin-top: 25px;
+        }
+
+        img {
+            width: 100%;
+            height: 400px;
+            object-fit: cover;
+        }
+    }
+}
+
+@media (max-width: 1120px) {
+    .nav {
+        li {
+            padding: 0 5px;
+        }
+    }
+}
+
+@media (max-width: 980px) {
+    .nav {
+        li {
+            font-size: 14px;
+        }
+    }
+}
+
+@media (max-width: 940px) {
+    .testimonial-section {
+        .next {
+            right: 0;
+        }
+
+        .prev {
+            left: 0;
+        }
+
+    }
+}
+
+@media (max-width: 860px) {
+    .nav {
+        ul {
+            display: none;
+        }
+
+        .fa-user {
+            display: none;
+        }
+
+        .burger_wrapper {
+            display: block;
+        }
+    }
+}
+
 @media (max-width: 768px) {
     .konserter .card {
         width: 90%;
@@ -8,49 +69,19 @@
     }
 }
 
-@media (max-width: 1120px) {
-    .nav {
-       li {
-        padding: 0 5px;
-       }
+@media (max-width: 730px) {
+    .harmonien {
+        padding: 30px;
     }
 }
-@media (max-width: 980px) {
-    .nav {
-       li {
-            font-size: 14px;
-    }
-    }
-}
-@media (max-width: 860px) {
-    .nav {
-        ul {
-            display: none;
-        }
-        .fa-user {
-            display: none;
-        }
-        .burger_wrapper {
-            display: block;
-        }
-    }
-}
-@media (max-width: 1300px) {
-    .vartRan {
-        display: block;
 
-        h2 {
-            margin-top: 25px;
+@media (max-width: 625px) {
+    .syng {
+        li {
+            grid-template-columns: 1fr;
         }
         img {
             width: 100%;
-            height: 400px;
-            object-fit: cover;
         }
-    }
-}
-@media (max-width: 730px) {
-    .harmonien {
-       padding: 30px;
     }
 }
