--- a/css/popup.css
+++ b/css/popup.css
@@ -42,8 +42,11 @@
         .p {
             font-size: 20px;
             background: orangered;
-            padding: 20px 0px;
+            padding: 20px 10px;
             font-weight: 600;
+            text-align: center;
+            color: white;
+            letter-spacing: 1px;
         }
     }
 
