--- a/css/style.css
+++ b/css/style.css
@@ -563,6 +563,9 @@
         font-size: 16px;
         line-height: 1.6;
         color: #333;
+        a {
+            text-decoration: none;
+        }
     }
 
 
