--- a/css/media.css
+++ b/css/media.css
@@ -72,11 +72,32 @@
     }
 }
 
+
+
 @media (max-width: 730px) {
     .harmonien {
         padding: 30px;
     }
 }
+
+@media (max-width: 700px) {
+    .vartRan .fw {
+        grid-template-columns: 1fr;
+        text-align: center;
+    }
+
+    .vartRan img {
+        width: 100%;
+    }
+
+    .vartRan h2 {
+        font-size: 28px;
+    }
+}
+
+
+
+
 
 @media (max-width: 625px) {
     .syng {
@@ -106,4 +127,3 @@
         padding: 5px;
     }
 }
-
